--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+ext {
+    version = [
+            versionCode          : 100,
+            versionName          : "1.0.0",
+            compileSdkVersion    : 27,
+            minSdkVersion        : 17,
+            targetSdkVersion     : 27,
+            supportLibraryVersion: "27.1.1",
+    ]
+}
 
 buildscript {
     
