--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,12 +37,6 @@ dependencies {
     implementation "com.android.support:cardview-v7:$version.supportLibraryVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
-    /*
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'*/
     /**
      * 开发库
      */
@@ -55,6 +49,14 @@ dependencies {
      */
     // 状态栏颜色工具
     implementation 'com.jaeger.statusbarutil:library:1.5.1'
+
+    /**
+     *   UI
+     */
+    // 封装的RecyclerView
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.40'
+    // RecyclerView Divider
+    implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
     /**
      *   Module库
      */
