--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="cn.com.brother.studio">
 
+    <!-- 悬浮窗权限 -->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW" />
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -26,6 +30,13 @@
         <!-- 仪表盘页面 -->
         <activity
             android:name=".activity.DashboardActivity"
+            android:alwaysRetainTaskState="true"
+            android:configChanges="keyboardHidden"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+        <!-- 识别文字页面 -->
+        <activity
+            android:name=".activity.DistinguishActivity"
             android:alwaysRetainTaskState="true"
             android:configChanges="keyboardHidden"
             android:screenOrientation="portrait"
